--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-
 html {
   --section-background-color: linear-gradient(
     to bottom left,
@@ -93,9 +92,6 @@ html {
   border-color: transparent !important;
 }
 
-.navbarmain{
-  margin-left: 210px;
-}
 .navbar-toggler span {
   display: block !important;
   background-color: #be50f4 !important;
@@ -140,16 +136,6 @@ html {
   transform: rotate(-135deg) !important;
   opacity: 0.9 !important;
 }
-@media (max-width: 1400px) {
-  .navbarmain{
-    margin-left: 200px;
-  }
-}
-@media (max-width: 1050px) {
-  .navbarmain{
-    margin-left: 50px;
-  }
-}
 
 @media (max-width: 767px) {
   .navbar {
@@ -163,13 +149,10 @@ html {
   .img-fluid {
     width: 230px !important;
   }
-  .img-home-main{
+  .img-home-main {
     width: 100% !important;
     text-align: center !important;
     padding-top: 40px !important;
-  }
-  .navbarmain{
-    margin-left: 0px;
   }
 }
 .navbar-brand {
@@ -197,7 +180,7 @@ html {
   .nav-link {
     padding: 0.7rem 1rem !important;
   }
-  #navhead{
+  #navhead {
     font-size: 1.05rem;
   }
 }
@@ -305,7 +288,7 @@ html {
 }
 
 .heading-name {
-  font-size: 4.0em !important;
+  font-size: 4em !important;
   padding-left: 45px !important;
 }
 
@@ -323,12 +306,12 @@ html {
   font-size: 2.4em !important;
   color: #cb70ff !important;
 }
-.typing-homeclass{
+.typing-homeclass {
   padding-left: 45px;
   text-align: left;
   font-size: 1.8em;
 }
-.sociallink-home{
+.sociallink-home {
   padding-left: 40px;
   text-align: left;
   padding-top: 35px;
@@ -350,18 +333,18 @@ html {
     padding: 6rem 0 2rem !important;
   }
   .heading-name {
-    font-size: 3.0em !important;
+    font-size: 3em !important;
     padding-left: 16px !important;
   }
-  .typing-homeclass{
+  .typing-homeclass {
     padding-left: 16px;
   }
-  .sociallink-home{
+  .sociallink-home {
     padding-left: 10px;
     text-align: left;
     padding-top: 55px;
   }
-  .socialicons{
+  .socialicons {
     padding-top: 10px;
     padding-right: 3px !important;
   }
@@ -377,20 +360,19 @@ html {
     padding-top: 2em !important;
     padding-bottom: 2em !important;
   }
-  
 }
 
 .home-about-section {
   position: relative;
   padding-bottom: 70px !important;
   padding-top: 70px !important;
-  color:#fbd9ad;
+  color: #fbd9ad;
 }
 .certificate-section {
   position: relative;
   padding-bottom: 70px !important;
   padding-top: 0px !important;
-  color:#fbd9ad;
+  color: #fbd9ad;
 }
 
 .home-about-description {
@@ -493,9 +475,9 @@ html {
   text-align: center !important;
   z-index: 7;
 }
-.aboutme-heading{
+.aboutme-heading {
   font-size: 4.6em;
-  color:#fbd9ad;
+  color: #fbd9ad;
 }
 @media (max-width: 767px) {
   .footer-copywright {
@@ -508,7 +490,7 @@ html {
   .home-about-description {
     padding-top: 0px !important;
   }
-  .aboutme-heading{
+  .aboutme-heading {
     font-size: 3.6em;
   }
 }
@@ -653,8 +635,6 @@ html {
   overflow: hidden !important;
   transition: all 0.4s ease 0s !important;
 }
-
-
 
 @media (max-width: 767px) {
   .tech-icons {
@@ -833,20 +813,20 @@ html {
   display: none !important;
 }
 
-
-
-.nav-fill .nav-item .nav-link, .nav-justified .nav-item .nav-link.active {
+.nav-fill .nav-item .nav-link,
+.nav-justified .nav-item .nav-link.active {
   color: #a12be6 !important;
   background-color: #fbd9ad;
   border-color: #fbd9ad #fbd9ad #fbd9ad;
   font-size: 17px;
-  font-weight:600;
+  font-weight: 600;
 }
 
-.nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover {
+.nav-tabs .nav-link:focus,
+.nav-tabs .nav-link:hover {
   border-color: #fbd9ad #fbd9ad #fbd9ad !important;
   isolation: isolate !important;
-  color:#fbd9ad !important;
+  color: #fbd9ad !important;
 }
 
 .nav-link {
@@ -854,10 +834,12 @@ html {
   padding: 0.5rem 1rem;
   color: #fbd9ad !important;
   text-decoration: none;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out;
 }
 
-.Navitem .nav-tabs .nav-link:focus,.Navitem .nav-tabs .nav-link:hover {
+.Navitem .nav-tabs .nav-link:focus,
+.Navitem .nav-tabs .nav-link:hover {
   border-color: #b061df #b061df #b061df;
   isolation: isolate;
 }
@@ -870,109 +852,118 @@ html {
   display: flex;
   height: 0.2rem !important;
   overflow: hidden;
-  font-size: .75rem;
+  font-size: 0.75rem;
   background-color: #e9ecef;
   border-radius: 0.25rem;
-  width:100%;
+  width: 100%;
 }
-#com{
+#com {
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    background-color: #fe3e57;
-    transition: width .6s ease;
-    width: 55%;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #fe3e57;
+  transition: width 0.6s ease;
+  width: 55%;
 }
-#pm{
+#pm {
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    background-color: #54faae;
-    transition: width .6s ease;
-    width: 55%;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #54faae;
+  transition: width 0.6s ease;
+  width: 55%;
 }
-#ps{
+#ps {
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    background-color: #ff8c2f;
-    transition: width .6s ease;
-    width: 55%;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #ff8c2f;
+  transition: width 0.6s ease;
+  width: 55%;
 }
-#aa{
+#aa {
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    background-color: #f1f965;
-    transition: width .6s ease;
-    width: 55%;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #f1f965;
+  transition: width 0.6s ease;
+  width: 55%;
 }
-#org{
+#org {
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    background-color: #ff0173;
-    transition: width .6s ease;
-    width: 55%;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #ff0173;
+  transition: width 0.6s ease;
+  width: 55%;
 }
-#cr{
+#cr {
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    background-color: #39c4ff;
-    transition: width .6s ease;
-    width: 55%;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #39c4ff;
+  transition: width 0.6s ease;
+  width: 55%;
 }
-#react{
+#react {
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    background-color: #41f2ff;
-    transition: width .6s ease;
-    width: 55%;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #41f2ff;
+  transition: width 0.6s ease;
+  width: 55%;
 }
 
-@media only screen and (min-width: 1170px){
-.vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
+@media only screen and (min-width: 1170px) {
+  .vertical-timeline--two-columns
+    .vertical-timeline-element-content
+    .vertical-timeline-element-date {
     left: 83% !important;
-}
+  }
 }
 
-@media only screen and (min-width: 1170px){
-.vertical-timeline--two-columns .vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content .vertical-timeline-element-date, .vertical-timeline--two-columns .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content .vertical-timeline-element-date {
+@media only screen and (min-width: 1170px) {
+  .vertical-timeline--two-columns
+    .vertical-timeline-element.vertical-timeline-element--right
+    .vertical-timeline-element-content
+    .vertical-timeline-element-date,
+  .vertical-timeline--two-columns
+    .vertical-timeline-element:nth-child(even):not(
+      .vertical-timeline-element--left
+    )
+    .vertical-timeline-element-content
+    .vertical-timeline-element-date {
     left: auto !important;
+  }
 }
-}
-
-
 
 .homeaboutsocial {
   /* text-align: center !important; */
@@ -1068,7 +1059,7 @@ html {
 
 .cert-body {
   margin: 0px;
-  height:max-height;
+  height: max-height;
 }
 
 .cert-body-title {
@@ -1076,7 +1067,7 @@ html {
   font-size: 20px;
   padding: 10px;
   padding-bottom: 0px;
-  color:black;
+  color: black;
 }
 
 .cert-body-subtitle {
@@ -1149,15 +1140,14 @@ html {
 }
 
 @media (max-width: 1380px) {
-
 }
 
 @media (max-width: 768px) {
   .cert-card {
     width: 100%;
   }
-  .comingsoonclass{
-    height: 500px !important;;
+  .comingsoonclass {
+    height: 500px !important;
   }
 }
 
@@ -1169,9 +1159,9 @@ html {
   align-items: center;
   justify-content: flex-end;
 }
-.blog--viewAll a{
+.blog--viewAll a {
   text-decoration: none;
-  color:#fbd9ad;
+  color: #fbd9ad;
 }
 
 .blog--viewAll a button {
@@ -1189,10 +1179,10 @@ html {
   font-weight: 500;
   padding-left: 1.5rem;
   cursor: pointer;
-  color:#fbd9ad !important;
+  color: #fbd9ad !important;
 }
 .blog--viewAll a button:hover {
-  color:#fbd9ad !important;
+  color: #fbd9ad !important;
 }
 
 .viewArr {
@@ -1205,19 +1195,18 @@ html {
   cursor: pointer;
 }
 .viewArr:hover {
-  color: #fbd9ad ;
+  color: #fbd9ad;
 }
-
 
 @media screen and (max-width: 600px) {
   .blog--viewAll {
-      position: relative;
-      margin-top: 2.5rem;
+    position: relative;
+    margin-top: 2.5rem;
   }
   .blog--viewAll a {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);  
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
@@ -1260,7 +1249,7 @@ html {
   transition: opacity 0.7s 0.3s;
 }
 
-.singleProject:hover img{
+.singleProject:hover img {
   opacity: 0;
 }
 
@@ -1281,18 +1270,17 @@ html {
   transform: translateX(-140px) scale(1.1) !important;
 }
 
-
-.singleProject .project--desc{
+.singleProject .project--desc {
   position: absolute;
   width: 95%;
   height: 200px;
   left: 0;
   top: 25px;
-  transform: translate(-110%,40%);
+  transform: translate(-110%, 40%);
   padding: 15px;
   border-radius: 0 20px 20px 0;
   transition: transform 0.9s;
-  color:rgb(147, 71, 192)!important;
+  color: rgb(147, 71, 192) !important;
   line-height: 110%;
   display: flex;
   align-items: center;
@@ -1300,11 +1288,11 @@ html {
   font-family: var(--primaryFont);
 }
 
-.singleProject:hover .project--desc{
-  transform: translate(-2%,40%);
+.singleProject:hover .project--desc {
+  transform: translate(-2%, 40%);
 }
 
-.singleProject .project--lang{
+.singleProject .project--lang {
   position: absolute;
   bottom: 20px;
   right: 0;
@@ -1312,7 +1300,7 @@ html {
   font-size: 0.8rem;
   display: flex;
   justify-content: center;
-  color:rgb(147, 71, 192)!important;
+  color: rgb(147, 71, 192) !important;
   gap: 0.5rem;
   flex-direction: column;
   border-radius: 10px 0 0 10px;
@@ -1321,14 +1309,14 @@ html {
   padding: 0.825rem;
 }
 
-.singleProject:hover .project--lang{
+.singleProject:hover .project--lang {
   transform: translateX(0);
 }
 
 .project--lang > span {
   font-family: var(--primaryFont);
   font-weight: 500;
-  word-break: break-word; 
+  word-break: break-word;
   line-height: 100%;
 }
 
@@ -1342,21 +1330,20 @@ html {
   border: 2px solid #fbd9ad;
   color: #fbd9ad;
   transition: all 0.2s;
-  
 }
 .iconBtn:hover {
-    background-color: #fbd9ad;
-    color: rgb(93 43 123);
-    transform: scale(1.1);
-    border: 2px solid rgb(93 43 123);
+  background-color: #fbd9ad;
+  color: rgb(93 43 123);
+  transform: scale(1.1);
+  border: 2px solid rgb(93 43 123);
 }
-  
+
 .icon {
   font-size: 1.1rem;
   transition: all 0.2s;
 }
 
-.input-class{
+.input-class {
   border: 4px solid #fbd9ad;
   background-color: #150d23;
   color: #fbd9ad;
@@ -1367,16 +1354,16 @@ html {
 .form-input {
   height: 50px;
   box-sizing: border-box;
-  border-radius: 50px; 
+  border-radius: 50px;
   outline: none;
   margin-bottom: 2rem;
   padding: 0.7rem 0.7rem;
   border-radius: 20px;
-  width: 100%; 
+  width: 100%;
   resize: none;
 }
-.form-input::placeholder{
-  color:#fbd9ad;
+.form-input::placeholder {
+  color: #fbd9ad;
 }
 
 .input-container {
@@ -1397,13 +1384,13 @@ html {
   width: 100%;
 }
 
-.label-class{
+.label-class {
   background-color: #150d23;
   color: #fbd9ad;
   font-weight: 600;
   font-size: 0.9rem;
   padding: 0 5px;
-  transform: translate(25px,50%);
+  transform: translate(25px, 50%);
   display: inline-flex;
   width: fit-content;
 }
@@ -1411,7 +1398,7 @@ html {
 .form-message {
   height: 150px;
   box-sizing: border-box;
-  border-radius: 50px; 
+  border-radius: 50px;
   outline: none;
   margin-bottom: 2rem;
   padding: 0.7rem 0.7rem;
@@ -1419,8 +1406,8 @@ html {
   width: 100%;
   resize: none;
 }
-.form-message::placeholder{
-  color:#fbd9ad;
+.form-message::placeholder {
+  color: #fbd9ad;
 }
 
 .contacts-body {
@@ -1445,7 +1432,7 @@ html {
   cursor: pointer;
 }
 
-.submitBtn{
+.submitBtn {
   background-color: #fbd9ad;
   color: #742586;
   transition: 250ms ease-in-out;
@@ -1455,7 +1442,7 @@ html {
 .send-icon {
   font-size: 25px;
   transform-origin: center;
-  transform: translate(5px,-3px) rotate(-30deg);
+  transform: translate(5px, -3px) rotate(-30deg);
 }
 
 .contact-map iframe {
@@ -1465,19 +1452,19 @@ html {
   height: 200px;
 }
 
-.contact-span{
+.contact-span {
   color: #ff6e36;
   font-size: 20px;
   padding-right: 20px;
 }
 
-.contact-para{
+.contact-para {
   border-left: 1px solid lightgrey;
   padding-left: 20px;
   margin: 0;
 }
 
-.detailsIcon{
+.detailsIcon {
   background-color: #fbd9ad;
   color: #742586;
   border-radius: 50%;
@@ -1490,7 +1477,7 @@ html {
   transition: 250ms ease-in-out;
   flex-shrink: 0;
 }
-.detailsIcon:hover{
+.detailsIcon:hover {
   transform: scale(1.1);
   color: #fbd9ad;
   background-color: #742586;
@@ -1507,7 +1494,7 @@ html {
   margin-top: 1.2rem;
 }
 
-.contact-map{
+.contact-map {
   padding-left: 7rem;
 }
 @media (max-width: 767px) {
@@ -1518,12 +1505,11 @@ html {
   .personal-details p {
     width: 95% !important;
   }
-  .contact-map{
+  .contact-map {
     padding-left: 0.8rem;
     padding-right: 20px;
   }
 }
-
 
 .personal-details {
   display: flex;
@@ -1536,7 +1522,7 @@ html {
 }
 
 .personal-details p {
-  padding-top:10px;
+  padding-top: 10px;
   margin-left: 1.5rem;
   font-size: 18px;
   line-height: 110%;
@@ -1545,8 +1531,6 @@ html {
   word-break: break-word;
   text-align: left;
 }
-
-
 
 .singleProjectPage {
   box-shadow: 4px 4px 8px rgba(36, 3, 3, 0.2);
@@ -1578,7 +1562,7 @@ html {
   font-weight: 600;
   font-size: 2.2rem;
   line-height: 110%;
-  color: '#fbd9ad'!important;
+  color: "#fbd9ad" !important;
   text-align: center;
 }
 
@@ -1588,7 +1572,7 @@ html {
   transition: opacity 0.7s 0.3s;
 }
 
-.singleProjectPage:hover img{
+.singleProjectPage:hover img {
   opacity: 0;
 }
 
@@ -1609,38 +1593,37 @@ html {
   transform: translateX(-225px) scale(1.1) !important;
 }
 
-
-.singleProjectPage .project--desc{
+.singleProjectPage .project--desc {
   position: absolute;
   width: 95%;
   height: 200px;
   left: 0;
   top: 25px;
-  transform: translate(-110%,40%);
+  transform: translate(-110%, 40%);
   padding: 15px;
   border-radius: 0 20px 20px 0;
   transition: transform 0.9s;
   line-height: 110%;
-  color:rgb(147, 71, 192)!important;
-  font-size: 1.1rem!important;
+  color: rgb(147, 71, 192) !important;
+  font-size: 1.1rem !important;
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: var(--primaryFont);
 }
 
-.singleProjectPage:hover .project--desc{
-  transform: translate(-2%,40%);
+.singleProjectPage:hover .project--desc {
+  transform: translate(-2%, 40%);
 }
 
-.singleProjectPage .project--lang{
+.singleProjectPage .project--lang {
   position: absolute;
   bottom: 20px;
   right: 0;
   width: 240px;
   font-size: 0.95rem;
   display: flex;
-  color: rgb(147, 71, 192)!important;
+  color: rgb(147, 71, 192) !important;
   justify-content: center;
   gap: 0.5rem;
   flex-direction: column;
@@ -1650,14 +1633,14 @@ html {
   padding: 0.825rem;
 }
 
-.singleProjectPage:hover .project--lang{
+.singleProjectPage:hover .project--lang {
   transform: translateX(0);
 }
 
 .project--lang > span {
   font-family: var(--primaryFont);
   font-weight: 500;
-  word-break: break-word; 
+  word-break: break-word;
   line-height: 100%;
 }
 
@@ -1671,24 +1654,23 @@ html {
   border: 2px solid #fbd9ad;
   color: #fbd9ad;
   transition: all 0.2s;
-  
 }
 .iconBtn:hover {
-    background-color: #fbd9ad;
-    color: rgb(93 43 123);
-    transform: scale(1.1);
-    border: 2px solid rgb(93 43 123);
+  background-color: #fbd9ad;
+  color: rgb(93 43 123);
+  transform: scale(1.1);
+  border: 2px solid rgb(93 43 123);
 }
 
 @media (max-width: 470px) {
-  .singleProjectPage .project--lang{
+  .singleProjectPage .project--lang {
     position: absolute;
     bottom: 20px;
     right: 0;
     width: 160px;
     font-size: 0.95rem;
     display: flex;
-    color: rgb(147, 71, 192)!important;
+    color: rgb(147, 71, 192) !important;
     justify-content: center;
     gap: 0.5rem;
     flex-direction: column;
@@ -1700,17 +1682,16 @@ html {
   .singleProjectPage:hover .project--showcaseBtn a:nth-child(2) {
     transform: translateX(-137px) scale(1.1) !important;
   }
-  
 }
 @media (max-width: 360px) {
-  .singleProjectPage .project--lang{
+  .singleProjectPage .project--lang {
     position: absolute;
     bottom: 20px;
     right: 0;
     width: 150px;
     font-size: 0.95rem;
     display: flex;
-    color: rgb(147, 71, 192)!important;
+    color: rgb(147, 71, 192) !important;
     justify-content: center;
     gap: 0.5rem;
     flex-direction: column;
@@ -1722,8 +1703,7 @@ html {
   .singleProjectPage:hover .project--showcaseBtn a:nth-child(2) {
     transform: translateX(-128px) scale(1.1) !important;
   }
-  
 }
-#resume{
-  height:800px;
+#resume {
+  height: 800px;
 }
